# RAII-Stopwatch

./: .gitignore  BUILDING.md  CMakeLists.txt  LICENSE  README.md
cmake/: install-config.cmake  install-rules.cmake  variables.cmake
example/: CMakeLists.txt  example.cpp
include/RAII-Stopwatch/: RAII-Stopwatch.h
test/: CMakeLists.txt  RAII-Stopwatch_test.cpp  RAII-Stopwatch_test.h
